Re-working Transitory and Permanent Shocks PS

--- a/notebooks/How-Large-Are-Transitory-And-Permanent-Shocks-Problems-And-Solutions.ipynb
+++ b/notebooks/How-Large-Are-Transitory-And-Permanent-Shocks-Problems-And-Solutions.ipynb
@@ -152,10 +152,12 @@
     "    \"CubicBool\":False,\n",
     "    \"vFuncBool\":False,\n",
     "    \"PermShkStd\":[(0.01*4/11)**0.5],  # Standard deviation of permanent shocks to income\n",
+    "    #\"PermShkStd\":[0.0],  # No permanent shocks to income\n",
     "    \"PermShkCount\":7,  # Number of points in permanent income shock grid\n",
     "    \"TranShkStd\":[(0.01*4)**0.5],  # Standard deviation of transitory shocks to income,\n",
+    "    #\"TranShkStd\":[0.0],  # No transitory shocks to income,\n",
     "    \"TranShkCount\":5,  # Number of points in transitory income shock grid\n",
-    "    \"UnempPrb\":0.07,  # Probability of unemployment while working\n",
+    "    \"UnempPrb\":0.0,  # Probability of unemployment while working\n",
     "    \"IncUnemp\":0.15,  # Unemployment benefit replacement rate\n",
     "    \"UnempPrbRet\":0.07,\n",
     "    \"IncUnempRet\":0.15,\n",
@@ -164,7 +166,8 @@
     "    \"aXtraCount\":20,  # Number of points in assets grid,\n",
     "    \"aXtraExtra\":[None],\n",
     "    \"aXtraNestFac\":3,  # Number of times to 'exponentially nest' when constructing assets grid\n",
-    "    \"LivPrb\":[1.0 - 1.0/240.0],  # Survival probability\n",
+    "    #\"LivPrb\":[1.0 - 1.0/240.0],  # Survival probability\n",
+    "    \"LivPrb\": [1.0],   #Infinitely living agents\n",
     "    \"DiscFac\":0.97,             # Default intertemporal discount factor, # dummy value, will be overwritten\n",
     "    \"cycles\":0,\n",
     "    \"T_cycle\":1,\n",
@@ -176,7 +179,7 @@
     "    'aNrmInitStd':0.0,\n",
     "    'pLvlInitMean':0.0,\n",
     "    'pLvlInitStd':0.0,\n",
-    "    'AgentCount':100,\n",
+    "    'AgentCount':2000,\n",
     "}"
    ]
   },
@@ -201,84 +204,45 @@
      "text": [
       "GPFRaw                 = 0.983799 \n",
       "GPFNrm                 = 0.987147 \n",
-      "GPFAggLivPrb           = 0.979700 \n",
+      "GPFAggLivPrb           = 0.983799 \n",
       "Thorn = APF            = 0.983799 \n",
       "PermGroFacAdj          = 0.996609 \n",
       "uInvEpShkuInv          = 1.000000 \n",
-      "VAF                    = 0.965958 \n",
-      "WRPF                   = 0.067617 \n",
+      "VAF                    = 0.970000 \n",
+      "WRPF                   = 0.000000 \n",
       "DiscFacGPFNrmMax       = 0.982630 \n",
-      "DiscFacGPFAggLivPrbMax = 0.990099 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:                      y   R-squared:                       0.129\n",
-      "Model:                            OLS   Adj. R-squared:                  0.129\n",
-      "Method:                 Least Squares   F-statistic:                 7.317e+04\n",
-      "Date:                Mon, 28 Feb 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        16:45:02   Log-Likelihood:                 47251.\n",
-      "No. Observations:              495000   AIC:                        -9.450e+04\n",
-      "Df Residuals:                  494998   BIC:                        -9.448e+04\n",
-      "Df Model:                           1                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==============================================================================\n",
-      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "------------------------------------------------------------------------------\n",
-      "const          0.0058      0.001     10.520      0.000       0.005       0.007\n",
-      "x1             0.0036   1.33e-05    270.507      0.000       0.004       0.004\n",
-      "==============================================================================\n",
-      "Omnibus:                   406484.625   Durbin-Watson:                   0.118\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         13928067.871\n",
-      "Skew:                           3.788   Prob(JB):                         0.00\n",
-      "Kurtosis:                      27.858   Cond. No.                         71.8\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+      "DiscFacGPFAggLivPrbMax = 0.985974 \n"
      ]
     }
    ],
    "source": [
     "#Solution:\n",
     "#Controlling the time horizon over which we estimate the transitory and permanent shocks:\n",
-    "ConsumerType.T_sim = 100\n",
+    "ConsumerType.T_sim = 10\n",
     "\n",
     "#Setting up and simulating the agents' behavior:\n",
     "ConsumerType.solve(verbose=False)\n",
-    "ConsumerType.track_vars = ['pLvl']\n",
+    "ConsumerType.track_vars = ['pLvl', 'TranShk', 'PermShk']\n",
     "ConsumerType.initialize_sim()\n",
     "\n",
     "ConsumerType.simulate()\n",
     "\n",
-    "SimulatedIncome = np.log(ConsumerType.history['pLvl'])\n",
+    "SimulatedPermIncome = np.log(ConsumerType.history['pLvl'])\n",
+    "SimulatedTranShocks = np.log(ConsumerType.history['TranShk'])\n",
+    "SimulatedPermShocks = np.log(ConsumerType.history['PermShk'])\n",
+    "\n",
+    "\n",
+    "SimulatedIncome = SimulatedPermIncome + SimulatedTranShocks\n",
     "#print(np.shape(SimulatedIncome))   #Just to check the shape of the matrix\n",
     "\n",
-    "d = []\n",
-    "y = []\n",
     "\n",
     "\n",
-    "for i in range(ConsumerType.AgentCount):\n",
-    "    for n in range(ConsumerType.T_sim -1):\n",
-    "        for j in range(ConsumerType.T_sim-n-1):\n",
-    "            Aux1 = (SimulatedIncome[j+n+1,i]- SimulatedIncome[j,i])**2\n",
-    "            y.append(Aux1)\n",
-    "            Aux2 = n+1\n",
-    "            d.append(Aux2)\n",
-    "            \n",
+    "#plt.plot(range(ConsumerType.T_sim), SimulatedIncome)\n",
+    "#plt.xlabel('Time t')\n",
+    "#plt.ylabel('Simulated Income')\n",
+    "#plt.show(block=False)\n",
     "\n",
-    "x = d\n",
-    "x = sm.add_constant(x)\n",
-    "model = sm.OLS(y,x)\n",
-    "results = model.fit()\n",
-    "results.params\n",
-    "\n",
-    "print(results.summary())\n",
-    "\n"
+    "#print(SimulatedPermIncome)"
    ]
   },
   {
@@ -290,8 +254,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The variance of the transitory shock Theta in the model is given by [0.2] where the empirical estimate gives us 0.0536372617214411\n",
-      "The variance of the permanent shock Psi in the model is given by [0.06030226891555272] where the empirical estimate gives us 0.06005135212661783\n"
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.002\n",
+      "Model:                            OLS   Adj. R-squared:                  0.001\n",
+      "Method:                 Least Squares   F-statistic:                     45.25\n",
+      "Date:                Sat, 12 Mar 2022   Prob (F-statistic):           1.76e-11\n",
+      "Time:                        15:42:36   Log-Likelihood:                 23481.\n",
+      "No. Observations:               30000   AIC:                        -4.696e+04\n",
+      "Df Residuals:                   29998   BIC:                        -4.694e+04\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.0683      0.003     24.337      0.000       0.063       0.074\n",
+      "x1             0.0034      0.001      6.727      0.000       0.002       0.004\n",
+      "==============================================================================\n",
+      "Omnibus:                    12389.229   Durbin-Watson:                   1.903\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            52123.539\n",
+      "Skew:                           2.052   Prob(JB):                         0.00\n",
+      "Kurtosis:                       7.985   Cond. No.                         24.8\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = []\n",
+    "y = []\n",
+    "minlag =3\n",
+    "\n",
+    "for i in range(ConsumerType.AgentCount):\n",
+    "    for n in range(minlag, ConsumerType.T_sim-1):\n",
+    "        for j in range(ConsumerType.T_sim-n-2):\n",
+    "            Aux1 = (SimulatedIncome[j+n+1,i]- SimulatedIncome[j+1,i])**2\n",
+    "            y.append(Aux1)\n",
+    "            Aux2 = n+1\n",
+    "            d.append(Aux2)\n",
+    "            \n",
+    "\n",
+    "x = d\n",
+    "x = sm.add_constant(x)\n",
+    "model = sm.OLS(y,x)\n",
+    "results = model.fit()\n",
+    "results.params\n",
+    "\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variance of the transitory shock Theta in the model is given by [0.2] where the empirical estimate gives us 0.18474536186786522\n",
+      "The variance of the permanent shock Psi in the model is given by [0.06030226891555272] where the empirical estimate gives us 0.05869364112780695\n"
      ]
     }
    ],
